# GhostTrackerPro

./: .gitignore  .vercelignore  GhostTrackerPro.py  GhostTrackerPro.spec  README.md  app.py  build_exe.bat  build_exe.py  core.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build.yml
api/: index.py
src/ghosttrackerpro/: __init__.py  __main__.py  app.py  cli.py  core.py
src/ghosttrackerpro/web/: __init__.py  server.py
src/ghosttrackerpro/web/static/: style.css
src/ghosttrackerpro/web/templates/: index.html
web/: server.py
web/static/: style.css
web/templates/: index.html
